fix menu overflow issue

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,4 +1,13 @@
 @media screen and (max-width: 768px) {
+	header nav {
+		overflow: hidden;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100vh;
+		pointer-events: none;
+	}
 	section.hero {
 		flex-direction: column;
 		justify-content: center;
